2003-01-24  Darin Adler  <darin@apple.com>

        Reviewed by John.

	- fixed 3140945 -- crash viewing www.nextthing.org

        * khtml/rendering/render_container.cpp: (RenderContainer::removeLeftoverAnonymousBoxes):
	Change this function so it will never remove a table cell. Although a table cell that is
	created automatically is anonymous, it is not an anonymous box in the sense that this
	function is trying to deal with. Maybe there will be a better way to fix this some day,
	but this is the best Dave and I could come up with.

	- fixed 3155700 -- nil-dereference in khtml::RenderTableRow::detach shortly after visiting www.alltheweb.com

        * khtml/rendering/render_table.cpp: (RenderTableRow::detach):
	Check for nil before calling setNeedCellRecalc in case we are being detached after our
	parent is already nil.

2003-01-23  Richard Williamson   <rjw@apple.com>

        Fix for 3152494.  Set the default iframe width to 300 and
        height to 150.  This copies the behavior of mozilla and IE.
        
        Reviewed by hyatt.

        * khtml/css/html4.css:

2003-01-23  Richard Williamson   <rjw@apple.com>

        Fixed whitespace exclusion code.  Fixes many sites
        that have problems that were exposed after
        fixing 3119777.
        
        Reviewed by hyatt.

        * khtml/rendering/bidi.cpp:
        (RenderFlow::bidiReorderLine):
        (RenderFlow::findNextLineBreak):
        * khtml/rendering/break_lines.cpp:
        * khtml/rendering/render_text.cpp:
        (RenderText::calcMinMaxWidth):

2003-01-23  David Hyatt  <hyatt@apple.com>

	Dump textslaves in the regression tests.
	
        Reviewed by rjw.

        * kwq/KWQRenderTreeDebug.cpp:
        (operator<<):
        (write):

2003-01-23  David Hyatt  <hyatt@apple.com>

	Fix for 3144763, inlines clear too many floats, and jump all the
	way to the end of the lowest float instead of only moving as far
	down as they have to in order to fit.
	
        Reviewed by darin
